--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - cd TicTacToeBoard
   - git clone https://github.com/google/googletest.git
   - cd googletest/googletest
-  - export TICTACTOEBOARD_DIR=$(pwd)
+  - export GTEST_DIR=$(pwd)
   - cd make
   - make
   - cd ../../../..
